# rust_decentralised_click_through_rate_saas_app

./: .gitignore  Cargo.toml
migrations/2026-04-02-122511-0000_user/: down.sql  up.sql
migrations/2026-04-04-080030-0000_user_updated/: down.sql  up.sql
migrations/2026-04-04-090040-0000_tasks/: down.sql  up.sql
migrations/2026-04-04-090751-0000_task_options/: down.sql  up.sql
migrations/2026-04-04-091655-0000_worker_work_details/: down.sql  up.sql
migrations/2026-04-04-102514-0000_work_submission_details/: down.sql  up.sql
migrations/2026-04-05-041325-0000_user_table_type_field_rename/: down.sql  up.sql
migrations/2026-04-05-050412-0000_user_update_type_of_created_at/: down.sql  up.sql
migrations/2026-04-14-064247-0000_submission_unique/: down.sql  up.sql
migrations/2026-04-14-170501-0000_payouts/: down.sql  up.sql
migrations/2026-04-21-112635-0000_creator_payment_intent/: down.sql  up.sql
src/: db.rs  errors.rs  main.rs  redis.rs  schema.rs  structs.rs
src/dtos/: mod.rs  naunce_auth_dto.rs  new_task_dto.rs  sign_in_user_dto.rs  task_details_with_options_dto.rs  task_dto.rs  task_id_dto.rs  task_submission_data_dto.rs  worker_work_details_dto.rs
src/middlewares/: auth_middleware.rs  mod.rs  user_type_middleware.rs
src/models/: creator_payment.rs  mod.rs  submission_details.rs  task.rs  task_options.rs  user.rs  worker_payouts.rs  worker_work_details.rs
src/routes/: mod.rs  route_handler.rs  task_routes.rs  user_routes.rs  worker_routes.rs
src/services/: mod.rs  tasks.rs  users.rs  worker.rs
src/utils/: jwt.rs
