[package]
name = "solana_saas_ctr_31st_march"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
dotenvy = "0.15.7"
http-serde = "2.1.1"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.50.0", features = ["full"] }
tower = { version = "0.5.1", features = ["full"] }
tower-http = {version = "0.6.8"  , features = ["trace" , "cors"]}
tracing = "0.1.44" 
tracing-subscriber = { version = "0.3.23", features = ["env-filter" , "json"] }
diesel = { version = "2.2.0", features = ["postgres" , "uuid" , "chrono" , "r2d2"] }
uuid =  {version = "1.23.0" , features = ["v4" , "serde"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
chrono = { version = "0.4.44", features = ["serde"] }
r2d2 = "0.8.10"
diesel-async = { version = "0.8.0", features = ["postgres" , "bb8"] }
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.129.0"