[package]
name = "solana_saas_ctr_31st_march"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
dotenvy = "0.15.7"
http-serde = "2.1.1"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.50.0", features = ["full"] }
tower = { version = "0.5.1", features = ["full"] }
tower-http = {version = "0.6.8"  , features = ["trace" , "cors"]}
tracing = "0.1.44" 
tracing-subscriber = { version = "0.3.23", features = ["env-filter" , "json"] }
diesel = { version = "2.2.0", features = ["postgres" , "uuid" , "chrono" ] }
uuid =  {version = "1.23.0" , features = ["v4" , "serde"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
chrono = { version = "0.4.44", features = ["serde"] }
diesel-async = { version = "0.8.0", features = ["postgres" , "bb8"] }
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.129.0"
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
validator = { version = "0.20", features = ["derive"] }
solana-sdk = "4.0.1"
redis = { version = "1.2", features = ["tokio-comp"] }
bb8 = "0.9.1"
bb8-redis = "0.26.0"
serde_json = "1.0.149"
